--- a/src/styles/components/ConversionModal.scss
+++ b/src/styles/components/ConversionModal.scss
@@ -13,7 +13,7 @@
   margin-left: 12px;
 }
 
-.Note{
+.Note {
   border-radius: 4px;
   background: rgb(255, 222, 227);
   color: rgb(211, 65, 72);
@@ -34,7 +34,7 @@
   display: inline-block;
   width: 32px;
   height: 32px;
-  margin-top: 6px; 
+  margin-top: 6px;
   margin-left: 8px;
 }
 
@@ -46,14 +46,17 @@
   opacity: 0;
   transform: scale(.5);
 }
+
 .ProgressMeter__icon .Icon.enter-active {
   opacity: 1;
   transform: scale(1);
 }
+
 .ProgressMeter__icon .Icon.exit {
   opacity: 1;
   transform: scale(1);
 }
+
 .ProgressMeter__icon .Icon.exit-active {
   opacity: 0;
   transform: scale(.5)
@@ -65,9 +68,8 @@
 }
 
 .ProgressBar {
-  @include theme((
-    background: "background-lighter",
-  ));
+  @include theme((background: "background-lighter",
+    ));
   width: 100%;
   height: 5px;
   border-radius: 6px;
@@ -88,13 +90,16 @@
 .ProgressBar.enter {
   opacity: 0;
 }
+
 .ProgressBar.enter-active,
 .ProgressBar.enter-done {
   opacity: 1;
 }
+
 .ProgressBar.exit {
   opacity: 1;
 }
+
 .ProgressBar.exit-active,
 .ProgressBar.exit-done {
   opacity: 0;
