--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -1,16 +1,15 @@
 @import '../config.scss';
 
 .Footer {
-  @include theme((
-    color: "text-invert",
-  ));
+  @include theme((color: "text-invert",
+    ));
   display: flex;
   align-items: center;
   font-size: 0.85rem;
   padding: 24px 0;
 
   @include breakpoint-medium {
-    
+
     padding: 64px 0;
     margin-bottom: 0;
   }
