--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -1,9 +1,9 @@
 @import "../config.scss";
 
-@keyframes spin { 
+@keyframes spin {
   100% {
     transform: rotate(360deg);
-  } 
+  }
 }
 
 .Icon {
@@ -27,11 +27,11 @@
     }
 
     &:hover {
-      & *[fill] {  
+      & *[fill] {
         fill: darken($primary-color, 6);
       }
 
-      & *[stroke] {  
+      & *[stroke] {
         stroke: darken($primary-color, 6);
       }
     }
@@ -41,24 +41,23 @@
     cursor: inherit;
   }
 
-  &.Icon--disabled svg, &.Icon--disabled svg:hover {
-    & *[fill] {  
-      @include theme((
-        fill: "background-lighter",
-      ));
+  &.Icon--disabled svg,
+  &.Icon--disabled svg:hover {
+    & *[fill] {
+      @include theme((fill: "background-lighter",
+        ));
     }
 
-    & *[stroke] {  
-      @include theme((
-        stroke: "background-lighter",
-      ));
+    & *[stroke] {
+      @include theme((stroke: "background-lighter",
+        ));
     }
-    
+
   }
 
   &.Icon--spin svg {
     cursor: inherit;
     animation: spin 1s linear infinite;
   }
-  
+
 }
