--- a/src/styles/components/Pagination.scss
+++ b/src/styles/components/Pagination.scss
@@ -1,9 +1,8 @@
 @import "../config.scss";
 
 .Pagination {
-  @include theme((
-    background: 'background-light'
-  ));
+  @include theme((background: 'background-light'
+    ));
   font-size: .9em;
   display: flex;
   align-items: center;
@@ -17,7 +16,8 @@
     padding: 0 8px;
   }
 
-  .Icon, .Icon svg {
+  .Icon,
+  .Icon svg {
     margin: 0;
     width: 24px;
     height: 24px;
