--- a/src/styles/components/UploadPanel.scss
+++ b/src/styles/components/UploadPanel.scss
@@ -14,10 +14,7 @@
 
 
 .Dropzone {
-  @include theme((
-    color: 'text-alt',
-    background: 'background-light'   
-  ));
+  @include theme((color: 'text-alt', background: 'background-light'));
   flex: 1;
   border-radius: 6px;
   padding: 16px;
@@ -32,9 +29,8 @@
   align-items: center;
   border-radius: 4px;
   border: 1px dashed #fff;
-  @include theme((
-    border-color: "background-lighter",
-  ));
+  @include theme((border-color: "background-lighter",
+    ));
   flex: 1;
 }
 
@@ -46,10 +42,7 @@
 }
 
 .UrlForm {
-  @include theme((
-    color: 'text-alt',
-    background: 'background-light'   
-  ));
+  @include theme((color: 'text-alt', background: 'background-light'));
   margin-top: 16px;
   margin-bottom: 22px;
   border-radius: 6px;
@@ -58,12 +51,8 @@
   box-shadow: 0 4px 12px -4px rgba(77, 77, 100, 0.1);
 }
 
-.Dropzone--active {
+.Dropzone--active {}
 
-}
+.Dropzone--reject {}
 
-.Dropzone--reject {
-}
-
-.Dropzone__content {
-}
+.Dropzone__content {}
