--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,18 +30,37 @@ body {
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: inherit;
   line-height: 1.5;
   font-weight: bold;
   margin-bottom: .5em;
 }
 
-h1 { font-size: 2.827em; }
-h2 { font-size: 1.999em;}
-h3 { font-size: 1.25em; }
-h4 { font-size: 1.125em; }
-small { font-size: 0.707em; }
+h1 {
+  font-size: 2.827em;
+}
+
+h2 {
+  font-size: 1.999em;
+}
+
+h3 {
+  font-size: 1.25em;
+}
+
+h4 {
+  font-size: 1.125em;
+}
+
+small {
+  font-size: 0.707em;
+}
 
 p {
   margin-bottom: 1em;
