--- a/src/styles/parts/forms.scss
+++ b/src/styles/parts/forms.scss
@@ -46,36 +46,34 @@
   border-radius: 4px;
   background: #fff;
   border: 1px solid #efefef;
-  @include theme((
-    color: 'text',
-    background: 'background-light',
-    border-color: 'background-lighter'
-  ));
-  
+  @include theme((color: 'text',
+      background: 'background-light',
+      border-color: 'background-lighter'
+    ));
+
   &::-webkit-input-placeholder {
-    @include theme((
-      color: 'text-invert',
-    ));
+    @include theme((color: 'text-invert',
+      ));
   }
+
   &::-moz-placeholder {
-    @include theme((
-      color: 'text-invert',
-    ));
+    @include theme((color: 'text-invert',
+      ));
   }
+
   &:-ms-input-placeholder {
-    @include theme((
-      color: 'text-invert',
-    ));
+    @include theme((color: 'text-invert',
+      ));
   }
+
   &:-moz-placeholder {
-    @include theme((
-      color: 'text-invert',
-    ));
+    @include theme((color: 'text-invert',
+      ));
   }
+
   &::placeholder {
-    @include theme((
-      color: 'text-invert',
-    ));
+    @include theme((color: 'text-invert',
+      ));
   }
 }
 
@@ -97,9 +95,8 @@
   background-position: right .7em top 50%, 0 0;
   background-size: .65em auto, 100%;
 
-  @include theme((
-    color: 'text',
-    background-color: 'background-light',
-    border-color: 'background-lighter'
-  ));
+  @include theme((color: 'text',
+      background-color: 'background-light',
+      border-color: 'background-lighter'
+    ));
 }
