--- a/src/styles/components/Switch.scss
+++ b/src/styles/components/Switch.scss
@@ -44,7 +44,7 @@
   height: 28px;
   width: 48px;
   border-radius: 14px;
-  margin: 2px 0;
+  margin: 2px 0px;
 
   .Switch__toggle {
     height: 28px;
