--- a/src/styles/parts/sudofont.scss
+++ b/src/styles/parts/sudofont.scss
@@ -3,11 +3,7 @@ $sf-font-name: "sudofont" !default;
 $sf-font-size-base: 24px !default;
 $sf-line-height-base: 1 !default;
 $sf-font-path: "../fonts/" !default;
-$sf-icon-sizes: (
-  2,
-  3,
-  4,
-  5) !default;
+$sf-icon-sizes: (2, 3, 4, 5) !default;
 
 $sf-map: (
   button-a: e000,
