--- a/src/styles/components/FlipnotePlayer.scss
+++ b/src/styles/components/FlipnotePlayer.scss
@@ -4,7 +4,7 @@
   position: relative;
 
   @include breakpoint-small-only {
-    margin: 0 -12px;
+    margin: 0px -12px;
   }
 
   // overflow: hidden;
@@ -16,10 +16,10 @@
 
 .Player__overlay {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
   width: 100%;
   height: 100%;
 }
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  margin: 0 -8px;
+  margin: 0px -8px;
 
   &.ControlsGroup--left {
     margin-right: auto;
@@ -46,7 +46,7 @@
   }
 
   .Icon {
-    margin: 0 8px;
+    margin: 0px 8px;
     flex: 0;
     // flex-basis: 28px;
 
@@ -61,7 +61,7 @@
     background: white;
     width: 100%;
     display: block;
-    box-shadow: 0 4px 12px -4px rgba(77, 77, 100, 0.1);
+    box-shadow: 0px 4px 12px -4px rgba(77, 77, 100, 0.1);
 
     @include breakpoint-medium {
       border-radius: 6px;
@@ -71,5 +71,5 @@
 }
 
 .Player__progressSlider {
-  padding: 16px 0;
+  padding: 16px 0px;
 }
