--- a/src/styles/components/FlipnoteThumb.scss
+++ b/src/styles/components/FlipnoteThumb.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   width: 100%;
   border-radius: 6px;
-  box-shadow: 0 4px 12px -4px rgba(77, 77, 100, 0.1);
+  box-shadow: 0px 4px 12px -4px rgba(77, 77, 100, 0.1);
 }
 
 .FlipnoteThumb__placeholder {
@@ -21,10 +21,10 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 
   .Icon {
     width: 32px;
@@ -61,6 +61,6 @@
   background: #efefef;
   color: #000;
   border-radius: 2px;
-  padding: 0 6px;
+  padding: 0px 6px;
   font-size: 0.7rem;
 }
