--- a/src/styles/components/UploadPanel.scss
+++ b/src/styles/components/UploadPanel.scss
@@ -9,9 +9,8 @@
 .UploadPanel__sdCardLink {
   // text-align: right;
   font-size: 0.85rem;
-  padding: 12px 0;
+  padding: 12px 0px;
 }
-
 
 .Dropzone {
   @include theme((color: 'text-alt', background: 'background-light'));
@@ -29,8 +28,7 @@
   align-items: center;
   border-radius: 4px;
   border: 1px dashed #fff;
-  @include theme((border-color: "background-lighter",
-    ));
+  @include theme((border-color: "background-lighter"));
   flex: 1;
 }
 
