--- a/src/styles/parts/buttons.scss
+++ b/src/styles/parts/buttons.scss
@@ -1,6 +1,5 @@
 .Button {
-  @include theme((background: 'background-light'
-    ));
+  @include theme((background: 'background-light'));
   // background: #fff;
   color: $primary-color;
   border: 1px solid $primary-color;
